Settings: set value bounds for ProgressBar
* Also, set ProgressBar to indeterminate while we wait for change in progress value

--- a/SimpleWeather.UWP/Preferences/Settings_About.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_About.xaml
@@ -75,6 +75,8 @@
                 Margin="0,0,0,0"
                 Foreground="{ThemeResource ProgressPaintColorBrush}"
                 IsIndeterminate="True"
+                Maximum="1"
+                Minimum="0"
                 Visibility="Collapsed" />
         </StackPanel>
         <HyperlinkButton
