Settings: add fallback to email for feedback

--- a/SimpleWeather.UWP/Preferences/Settings_About.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_About.xaml
@@ -84,8 +84,7 @@
             x:Uid="FeebackButton"
             Click="FeedbackButton_Click"
             Content="Feedback"
-            Style="{ThemeResource HyperlinkButtonStyle}"
-            Visibility="Collapsed" />
+            Style="{ThemeResource HyperlinkButtonStyle}" />
         <HyperlinkButton
             x:Name="ReviewButton"
             x:Uid="ReviewButton"
