LocationQueryViewModel: add region info to view
* For WeatherAPI location, remove country from location name for US or Canada
* Keep country name and remove region info for non-US or Canada locations

--- a/SimpleWeather.UWP/Controls/DataTemplates.xaml
+++ b/SimpleWeather.UWP/Controls/DataTemplates.xaml
@@ -44,7 +44,7 @@
                 Grid.Column="1"
                 Padding="5"
                 FontSize="12"
-                Text="{x:Bind LocationCountry, Mode=OneWay}"
+                Text="{x:Bind LocationRegionText, Mode=OneWay}"
                 TextAlignment="Left" />
         </Grid>
     </DataTemplate>
