LocationPanel: fix alignment for temperature

--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -142,6 +142,7 @@
                 FontWeight="Medium"
                 HorizontalTextAlignment="Right"
                 Style="{ThemeResource WeatherIcon}"
+                TextAlignment="Right"
                 Visibility="{x:Bind ViewModel.HiTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
                 <Span><Run Text="{x:Bind ViewModel.HiTemp, Mode=OneWay, FallbackValue='80°', TargetNullValue='--'}" /><Run Text=" &#xf058;" /></Span>
                 <LineBreak /><Span><Run Text="{x:Bind ViewModel.LoTemp, Mode=OneWay, FallbackValue='65°', TargetNullValue='--'}" /><Run Text=" &#xf044;" /></Span>
