--- a/SimpleWeather.UWP/Controls/Graphs/RangeBarGraphView.xaml
+++ b/SimpleWeather.UWP/Controls/Graphs/RangeBarGraphView.xaml
@@ -43,6 +43,7 @@
             x:Name="Canvas"
             Background="Transparent"
             ClearColor="Transparent"
+            CreateResources="Canvas_CreateResources"
             RegionsInvalidated="Canvas_RegionsInvalidated" />
     </ScrollViewer>
 </UserControl>
